--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,26 @@
-.parent {
-
-  text-align: center;
+body{
+  background-color: rgba(90, 11, 90, 0.637);
 }
 
 ul{
   list-style-type: none;
+}
+
+.parent{
+ display:grid;
+ grid-template-columns: 45% 60% ;
+ background-color: rgba(90, 11, 90, 0.637);
+ text-align: center;
+}
+
+.title{
+  padding:0px;
+  margin:0px;
+  background-color: rgba(90, 11, 90, 0.637);
+  text-align: center;
+  font-size: 30px;
+}
+
+form{
+  font-size: 45px;
 }
